# CryptoScope

./: .gitignore  PLAN.md  README.md  pyproject.toml
cryptoscope/: __init__.py  app.py  config.py  db.py  main.py
cryptoscope/charting/: engine.py  indicators.py
cryptoscope/data/: base.py  binance.py  coingecko.py  cryptopanic.py  fear_greed.py  lunarcrush.py  reddit.py  symbol_map.py  trends.py
cryptoscope/models/: price.py  sentiment.py
cryptoscope/ui/: chart_view.py  input.py  layout.py  pair_finder.py  panels.py  sentiment_view.py  settings_view.py  themes.py
cryptoscope/utils/: formatting.py
