[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoscope"
version = "0.1.0"
description = "Bloomberg-style terminal for cryptocurrency analysis"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
    "httpx>=0.27",
    "pandas>=2.2",
    "plotext>=5.2",
    "apscheduler>=3.10",
    "tomli>=2.0; python_version < '3.12'",
    "tomli-w>=1.0",
    "websockets>=12.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.3",
]

[project.scripts]
cryptoscope = "cryptoscope.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
